--- a/hw/templates/notice_new.html
+++ b/hw/templates/notice_new.html
@@ -23,7 +23,7 @@
                         <input name="notice_file" type="file" >
                     </div>
                     {% if user.is_superuser == True %}
-                    <input type="button" class="btn btn-primary btn-lg" value="공지사항 추가" onclick="submit_btn()">
+                    <input type="submit" class="btn btn-primary btn-lg" value="공지사항 추가" onclick="submit_btn()">
                     {% endif %}
                 </form>
             </div>
@@ -38,7 +38,6 @@
             } else {
                 alert("공지가 등록되었습니다.");
                 document.getElementById('edit').submit();
-
             }
         }
     </script>
