--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="ko">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     {% block link %}{% static 'stacklion/css/QnA.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
     {% block jqueryscript %}
@@ -96,7 +98,8 @@
                         </div>
                         <div id="div_files">
                             {% for qfile in question.files.all %}
-                                <div >
+                                <div>
+                                    <p><i class="icon fa fa-file" aria-hidden="true"></i></p>
                                     <a class="question_file{{ question.id }}" id="{{ qfile.id }}" href="{{ qfile.file.url }}"
                                        download="" value="" style="color: rgb(151, 151, 151); font-size: 13px;">{{ qfile.file }}</a>
                                 </div>
